// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalRewardsPageComponent should show the create new banner when no statements are returned 1`] = `
<pf-total-rewards-page
  loadingStatements$={[Function Observable]}
  searchTerm$={[Function Observable]}
  statements$={[Function Observable]}
  store={[Function Store]}
>
  <pf-page-with-title-bar>
    
    <fa-icon
      aria-hidden="true"
      class="mr-2"
    />
    Total Rewards Statements 
    
    <pf-input-debounce
      class="mr-2"
    />
    <button
      class="btn btn-primary"
    >
      <fa-icon
        aria-hidden="true"
        class="mr-2"
      />
      New Statement 
    </button>
    
    
    <pf-create-new-statement-banner />
    
    <pf-create-new-statement-modal />
  </pf-page-with-title-bar>
</pf-total-rewards-page>
`;

exports[`TotalRewardsPageComponent should show the grid component when statements are returned 1`] = `
<pf-total-rewards-page
  loadingStatements$={[Function Store]}
  searchTerm$={[Function Store]}
  statements$={[Function Observable]}
  store={[Function Store]}
>
  <pf-page-with-title-bar>
    
    <fa-icon
      aria-hidden="true"
      class="mr-2"
    />
    Total Rewards Statements 
    
    <pf-input-debounce
      class="mr-2"
    />
    <button
      class="btn btn-primary"
    >
      <fa-icon
        aria-hidden="true"
        class="mr-2"
      />
      New Statement 
    </button>
    
    
    <pf-statements-grid />
    
    <pf-create-new-statement-modal />
  </pf-page-with-title-bar>
</pf-total-rewards-page>
`;
